methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:8: error: identifier expected but integer literal found.
      setPos(listPos[compteur],listPos[compteur+1])
                                                ^FlowerPot:11: error: ']' expected but '}' found.
    }
    ^